--- a/src/app/match-details/match-details.component.html
+++ b/src/app/match-details/match-details.component.html
@@ -22,15 +22,15 @@
             <div class="collapse" [id]='"killsCollapse"+collapseId' [attr.aria-labelledby]='"killsCollapse"+collapseId'
                 [attr.data-parent]='"#detailsCollapse"+collapseId'>
                 <div class="card card-body">
-                    <app-event-display *ngFor="let kill of killEvents" [chosenSummoner]="chosenSummoner"
-                        [matchInfo]="matchInfo" [killInfo]="kill" [eventType]="eventType.Kill"></app-event-display>
+                    <app-event-display *ngFor="let kill of killEvents; let eventId = index;" [chosenSummoner]="chosenSummoner"
+                        [matchInfo]="matchInfo" [killInfo]="kill" [eventType]="eventType.Kill" [eventDisplayId]="eventId"></app-event-display>
                 </div>
             </div>
             <div class="collapse" [id]='"deathsCollapse"+collapseId'
                 [attr.aria-labelledby]='"deathsCollapse"+collapseId' [attr.data-parent]='"#detailsCollapse"+collapseId'>
                 <div class="card card-body">
-                    <app-event-display *ngFor="let death of deathEvents" [chosenSummoner]="chosenSummoner"
-                        [matchInfo]="matchInfo" [killInfo]="death" [eventType]="eventType.Death"></app-event-display>
+                    <app-event-display *ngFor="let death of deathEvents; let eventId = index;" [chosenSummoner]="chosenSummoner"
+                        [matchInfo]="matchInfo" [killInfo]="death" [eventType]="eventType.Death" [eventDisplayId]="eventId"></app-event-display>
                 </div>
             </div>
         </div>
