--- a/src/app/match-details/match-details.component.html
+++ b/src/app/match-details/match-details.component.html
@@ -26,11 +26,7 @@
                         [chosenSummoner]="chosenSummoner" [matchInfo]="matchInfo" [killInfo]="kill"
                         [eventType]="eventType.Kill" [eventDisplayId]="eventId"></app-event-display>
                 </div>
-                <div class="row top5">
-                    <div class="col">
-                        <button type="button" (click)="generateRecordingFile()">Generate recording</button>
-                    </div>
-                </div>
+                <ng-container *ngIf="currentEventType == eventType.Kill" [ngTemplateOutlet]="generate"></ng-container>
             </div>
             <div class="collapse" [id]='"deathsCollapse"+collapseId'
                 [attr.aria-labelledby]='"deathsCollapse"+collapseId' [attr.data-parent]='"#detailsCollapse"+collapseId'>
@@ -39,12 +35,25 @@
                         [chosenSummoner]="chosenSummoner" [matchInfo]="matchInfo" [killInfo]="death"
                         [eventType]="eventType.Death" [eventDisplayId]="eventId"></app-event-display>
                 </div>
-                <div class="row top5">
-                    <div class="col">
-                        <button type="button" (click)="generateRecordingFile()">Generate recording</button>
-                    </div>
-                </div>
+                <ng-container *ngIf="currentEventType == eventType.Death" [ngTemplateOutlet]="generate"></ng-container>
             </div>
         </div>
     </div>
 </div>
+
+<ng-template #loading>
+    <div class="spinner-border" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
+</ng-template>
+
+<ng-template #generate>
+    <div class="row top5">
+        <div class="col text-center">
+            <button type="button" (click)="generateRecordingFile()">Generate recording metadata</button>
+            <a class="btn" style="height: 50px;width:50px;" [href]="downloadLink" download="replay.json" *ngIf="generateClicked">
+                <i *ngIf="replayPlaybackLoaded; else loading" class="fa fa-download fa-3x" aria-hidden="true"></i>
+            </a>
+        </div>
+    </div>
+</ng-template>
